--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <section>
+            <div class="parent">
+                <img id="img.bg" src="assets/Group.png" alt="">
+                <h1 class="parent-title">"In the near future, I hope to become a Developer."</h1>
+                <p class="parent-description">"In the near future, I aspire to become a Developer, creating innovative software solutions and continuously enhancing my technical skills to contribute to dynamic development teams."</p>
+                <button>Contact with me</button>
+            </div>
+        </section>
+    </header>
+    <main>
+        <section class="content">
+            <div class="content-main">
+                <h3 class="content-title">Why Web Development??</h3>
+                <p class="content-description">Web developers provide businesses with the unique, engaging websites they need to connect with customers. While businesses could feasibly create their own sites using Wix, Squarespace, or WordPress templates, these tend to look amateurish and run slowly compared to sites built by professional Web Developers.</p>
+                <div>
+                    <div class="code">
+                        <div class="code-content">
+                            <h3 class="code-title">I will Do Coding and Change The World</h3>
+                            <p class="code-description">"Through coding, I aim to innovate and create impactful solutions that   transform and improve the world."</p>
+                            <div>
+                                <button class="btn">Learn More</button>
+                            </div>
+                        </div>
+                        <div>
+                            <img class="code-img" src="assets/Layer_1.png" alt="">
+                        </div>
+                    </div>
+            </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
