2nd part complete

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         </section>
     </header>
     <main>
-        <section class="content">
-            <div class="content-main">
-                <h3 class="content-title">Why Web Development??</h3>
-                <p class="content-description">Web developers provide businesses with the unique, engaging websites they need to connect with customers. While businesses could feasibly create their own sites using Wix, Squarespace, or WordPress templates, these tend to look amateurish and run slowly compared to sites built by professional Web Developers.</p>
+        <section class="container">
+            <div class="content">
+                <div class="content-head">
+                    <h3 class="content-title">Why Web Development??</h3>
+                    <p class="content-description">Web development is essential for creating websites and applications that connect people, businesses, and services globally, enhancing accessibility and communication.</p>
+                </div>
                 <div>
                     <div class="code">
                         <div class="code-content">
@@ -33,6 +35,35 @@
                         </div>
                         <div>
                             <img class="code-img" src="assets/Layer_1.png" alt="">
+                        </div>
+                    </div>
+                <div>
+                    <div class="modern">
+                        <div class="modern-main">
+                            <div>
+                                <img class="modern-img" src="assets/Group 3.png" alt="">
+                            </div>
+                            <div class="modern-primary">
+                                <h3 class="modern-title">I will help People by creating Modern Web System
+                                </h3>
+                                <p class="modern-description">"I aim to help people by creating modern web systems that enhance user experience and streamline digital interactions."</p>
+                                <div>
+                                    <button class="btn">Learn More</button>
+                                </div>
+                            </div>    
+                        </div>
+                    </div>
+                <div>
+                    <div class="code">
+                        <div class="code-content">
+                            <h3 class="code-title">I will Do Coding and Change The World</h3>
+                            <p class="code-description">"Through coding, I aim to innovate and create impactful solutions that   transform and improve the world."</p>
+                            <div>
+                                <button class="btn">Learn More</button>
+                            </div>
+                        </div>
+                        <div>
+                            <img class="code-img" src="assets/Group 4.png" alt="">
                         </div>
                     </div>
             </div>
