--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
             </div>
             </div>
         </section>
+        <section class="zero-hero">
+            <div class="zero-hero-content">
+                <h3 class="zero-hero-title">My Inspiration</h3>
+                <p class="zero-hero-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta error, dolorum quaerat,</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=nKJb3qaEeAI2eAdl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
     <footer>
 
