my current target section added

--- a/index.html
+++ b/index.html
@@ -72,8 +72,32 @@
         <section class="zero-hero">
             <div class="zero-hero-content">
                 <h3 class="zero-hero-title">My Inspiration</h3>
-                <p class="zero-hero-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta error, dolorum quaerat,</p>
+                <p class="zero-hero-description">Web development involves creating and maintaining websites, focusing on front-end design and back-end functionality. It allows for creative expression and problem-solving in a constantly evolving digital landscape.</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=nKJb3qaEeAI2eAdl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+        <section class="target">
+            <h3 class="target-title">My Current Target</h3>
+            <p class="target-description">Web development involves creating and maintaining websites, encompassing both frontend (HTML, CSS, JavaScript) and backend (server-side languages, databases) development.</p>
+            <div class="languages">
+                <div class="language-html">
+                    <img src="assets/html.png" alt="">
+                    <h4 class="language-title">HTML</h4>
+                    <p class="language-description">HyperText Markup Language</p>
+                    <a class="anchor" href="https://www.w3schools.com/html/">Learn More</a>
+                </div>
+                <div class="language-css">
+                    <img src="assets/css.png" alt="">
+                    <h4 class="language-title">CSS</h4>
+                    <p class="language-description">Cascading Style Sheets</p>
+                    <a class="anchor" href="https://www.w3schools.com/css/">Learn More</a>
+                </div>
+                <div class="language-js">
+                    <img src="assets/js.png" alt="">
+                    <h4 class="language-title">JavaScript</h4>
+                    <p class="language-description">JavaScript, often abbreviated as JS, is a programming language and core technology of the Web, alongside HTML and CSS.</p>
+                    <a class="anchor" href="https://www.w3schools.com/js/">Learn More</a>
+                </div>
             </div>
         </section>
     </main>
