support section added

--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
                 </div>
             </div>
         </section>
+        <section class="support">
+            <div>
+                <h3 class="support-title">I need Support</h3>
+                <p class="support-description">If you need any support then write about your problem and submit here.</p>
+                <div class="submit">
+                    <input type="text" placeholder="Suggest me any feedback for me">
+                    <button type="submit">Submit</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
