--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img id="img.bg" src="assets/Group.png" alt="">
                 <h1 class="parent-title">"In the near future, I hope to become a Developer."</h1>
                 <p class="parent-description">"In the near future, I aspire to become a Developer, creating innovative software solutions and continuously enhancing my technical skills to contribute to dynamic development teams."</p>
-                <button>Contact with me</button>
+                <button >Contact with me</button>
             </div>
         </section>
     </header>
@@ -112,7 +112,16 @@
         </section>
     </main>
     <footer>
+        <div class="footer-container">
+            <div class="footer-title">
+                <p>© Copyright 2024. Designed and Developed by Abir</p>
+            </div>
+            <div class="footer-social-media">
+                <a href="https://www.facebook.com/"><img src="assets/facebook.png" alt=""></a>
+                <a href="https://github.com/"><img src="assets/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/"><img src="assets/linkedin-icon 1.png" alt=""></a>
+            </div>
+        </div>
 
-    </footer>
 </body>
 </html>
