button link with footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img id="img.bg" src="assets/Group.png" alt="">
                 <h1 class="parent-title">"In the near future, I hope to become a Developer."</h1>
                 <p class="parent-description">"In the near future, I aspire to become a Developer, creating innovative software solutions and continuously enhancing my technical skills to contribute to dynamic development teams."</p>
-                <button >Contact with me</button>
+                <a href="#footer-section"><button>Contact with me</button></a>
             </div>
         </section>
     </header>
@@ -111,7 +111,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer id="footer-section">
         <div class="footer-container">
             <div class="footer-title">
                 <p>© Copyright 2024. Designed and Developed by Abir</p>
